# nv_faxdetekt

./: CMakeLists.txt  app_nv_backgrounddetect.c  app_nv_faxdetect.c
CMakeModules/: Findasterisk.cmake
